# secret-santa

./: .env.shared  .gitignore  LICENSE  README.md  config.py  pyproject.toml  secret-santa-mailer.py
tests/: context.py
